--- a/productos.html
+++ b/productos.html
@@ -40,25 +40,25 @@
         <div class="card">
           <img class="card-img-top" src="./productos/1.jpeg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Buzo Negro</h5>
+            <p class="card-text">Buzo de material resistente en distintos talles.</p>
+            <p class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></p>
           </div>
         </div>
         <div class="card">
           <img class="card-img-top" src="./productos/2.jpeg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Remera Verde</h5>
+            <p class="card-text">Estilo militar y ecológico.</p>
+            <p class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></p>
           </div>
         </div>
         <div class="card">
           <img class="card-img-top" src="./productos/3.jpeg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Buzo Azul</h5>
+            <p class="card-text">No pases frío nunca más!</p>
+            <p class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></p>
           </div>
         </div>
       </div>
@@ -69,25 +69,25 @@
         <div class="card">
           <img class="card-img-top" src="./productos/4.jpeg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Jean Negro</h5>
+            <p class="card-text">Es un Jean que podes usar para ir a trabajar.</p>
+            <p class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></p>
           </div>
         </div>
         <div class="card">
           <img class="card-img-top" src="./productos/5.jpeg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Campera Azul</h5>
+            <p class="card-text">Toda la facha con este producto.</p>
+            <p class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></p>
           </div>
         </div>
         <div class="card">
           <img class="card-img-top" src="./productos/6.jpeg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Buzo con capucha Azul</h5>
+            <p class="card-text">Más onda imposible con esta prenda.</p>
+            <p class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></p>
           </div>
         </div>
       </div>
