--- a/nosotros.html
+++ b/nosotros.html
@@ -1,58 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Agrego el SEO -->
     <meta name="description" content="Ropa minimalista con precio accesible. Hacé click y encontrá lo que estás buscando">
     <meta name="keywords" content="Ropa, minimalista, precio, barato, minimalismo, moda">
+    <!-- fav icon -->
+    <link rel="shortcut icon" href="./archivos/imagenes/favicon2.png">
+    <!--Agrego el framework Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--Hoja de estilos-->
     <link rel="stylesheet" href="css/style.css">
-    <title>Inicio</title>
-</head>
-<body>
- 
-  <ul class="nav justify-content-end">
-    <li class="nav-item">
-      <a class="nav-link active" href="./index.html">INICIO</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="./productos.html">PRODUCTOS</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="./nosotros.html">NOSOTROS</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="./contacto.html">CONTACTO</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="./redes.html">REDES</a>
-      </li>
-  </ul>
+    <title>Nosotros</title>
+  </head>
 
+  <body>
+  
+    <header> 
+      <h1>PALO</h1> 
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="./index.html">
+            <img src="./archivos/imagenes/favicon2.png" alt="logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="./index.html">Inicio</a>
+              <a class="nav-link" href="./productos.html">Productos</a>
+              <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+              <a class="nav-link" href="./redes.html">Redes</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
 
-  <iframe width="100%" height="500" src="https://www.youtube.com/embed/AuIx8CqLa9U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <!--VIDEO DE LA MARCA-->
+    <iframe width="100%" height="500" src="https://www.youtube.com/embed/AuIx8CqLa9U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-      <h1 class="display-1">NOSOTROS</h1>
-
+    <main>  
+      <h2>NOSOTROS</h2>
       <p class="lead">
         Hola! Gracias por visitar PALO, la marca de ropa minimalista y ecológica con precio accesible. Ideal para vestirse bien, gastando poco. Y lo mejor, todo de industria nacional!
-          </p>
-
-      <p class="lead">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos fugit atque numquam provident nesciunt in, distinctio commodi corporis assumenda magnam explicabo ipsum nam! Unde facere accusamus laborum corrupti esse, cum aut quae officiis. Similique, quo. Quae non nulla consequatur officiis assumenda aliquam tempora est nam, minima, perferendis quidem magni ut deleniti? Vitae, maxime in voluptates natus asperiores alias quas quis, doloremque provident, minus amet? Ea nam expedita ex. Hic incidunt asperiores quo ipsa deserunt veritatis maiores, possimus illo tempora nihil aspernatur magnam perferendis nobis ex! Eaque soluta quaerat id repellendus officia aut recusandae, molestiae rerum veritatis quae cumque quidem adipisci earum. Eaque, sequi alias tempora voluptatibus exercitationem dolore ipsam sed a quas veniam aut est, sint soluta. Quam nulla dicta itaque voluptatem quos placeat alias cumque ea magni voluptate, quod unde reiciendis sed, ut nostrum nisi ducimus quibusdam provident neque distinctio? Repellendus fuga autem sint eum qui necessitatibus iste veniam. Voluptatem error veniam tempora eaque explicabo incidunt eum. Cupiditate nobis atque temporibus molestiae suscipit, voluptatem, eligendi sit perferendis deserunt repellat ipsam veritatis, corrupti obcaecati nesciunt numquam iure delectus incidunt iusto. Explicabo, blanditiis aliquid. Commodi enim accusantium minus vero, modi sit consequuntur, vel asperiores totam, a reprehenderit sapiente quisquam nihil iste deserunt eligendi. Sapiente quae at, natus recusandae aliquam aliquid doloribus adipisci fuga ipsa labore dignissimos impedit illo. Voluptas officia dolor esse atque aliquam dolores qui, tenetur laboriosam obcaecati ex ratione suscipit perspiciatis assumenda, earum quaerat quos maiores iusto? At, deleniti quam porro impedit voluptates ex ipsam asperiores unde sapiente dolorum reiciendis consequuntur minima ad officiis quis ducimus, placeat tempora nisi in eaque alias culpa iure autem possimus. Ipsum sed facere accusantium tenetur dolorem, quaerat corporis natus. Rerum non nulla nemo rem quos facere fuga accusamus corrupti magnam? Similique harum odio sunt molestiae possimus nam nemo, velit commodi dolorum suscipit numquam!
       </p>
+      <h3>Ropa Minimalista</h3>
+      <p class="lead">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eaque doloremque ea dicta officia quos magni, architecto quod! Porro officia mollitia repudiandae quasi placeat omnis incidunt, vitae beatae, expedita quia laudantium explicabo vero vel alias consequatur rem, ab harum dolorum quas nesciunt distinctio deserunt minus aspernatur. Quaerat, error nam. Esse rerum eius quia eveniet totam, magni quo voluptates voluptatum veniam odit! Cupiditate illo eius, numquam totam enim quibusdam commodi, nobis porro delectus dolores explicabo odit, voluptatibus a earum provident rem maxime labore sapiente debitis. Suscipit laboriosam qui, amet quia pariatur molestias earum sunt veniam commodi alias, hic officia repellendus exercitationem. Animi blanditiis sapiente possimus. Voluptate quae nisi deserunt iusto, distinctio sit eum praesentium, dignissimos accusamus quibusdam numquam quas aspernatur officia vitae? Dicta voluptas, quae repellendus explicabo itaque ut voluptatum nobis fugiat praesentium amet harum perspiciatis sapiente. Consectetur dolorem, suscipit praesentium et nemo magni, amet vero dolorum ratione quia, blanditiis sed?
+      </p>
+      <h4>Eco-Friendly</h4>
+      <p class="lead">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odio optio explicabo consequuntur eius harum, ea ducimus quaerat temporibus consequatur adipisci impedit, omnis quos deleniti pariatur saepe molestiae incidunt et dolor. Odit quae repellendus architecto obcaecati autem nemo porro, quod ut sequi in nulla asperiores sint ipsa dicta, adipisci deleniti iste similique tenetur animi ipsam temporibus voluptate numquam quos. Ex nihil consequuntur architecto molestiae assumenda nulla excepturi odio eius unde ipsum, laboriosam odit esse eum doloremque suscipit aliquid. Possimus natus libero autem! Quia neque omnis quo, ducimus provident pariatur numquam aut reiciendis id error, autem cum itaque sint officiis accusantium perspiciatis odit? Architecto soluta pariatur sequi aspernatur? Nemo, consequatur maxime. Distinctio voluptatibus placeat assumenda voluptates ipsam maiores in nostrum natus temporibus dignissimos iure aspernatur quam, impedit praesentium, sed ab dolor repudiandae quae adipisci veritatis voluptatum aut voluptas quasi. Voluptatum tempore nesciunt similique nihil cum magni nemo soluta? Accusamus, iste maxime.
+      </p>
+    </main>
 
-      <div class="alert alert-dark" role="alert">
-        Obtené un 10% de descuento con tu primera compra!
-      </div>
+    <div class="alert alert-dark" role="alert">
+      <a href="#">Obtené un 10% de descuento con tu primera compra!</a>   
+    </div>
 
-      <blockquote class="blockquote text-center">
-        <p class="mb-0">Todos los derechos e izquierdos reservados.</p>
-        <footer class="blockquote-footer">PALO <cite title="Source Title"></cite></footer>
-      </blockquote>
+    <!--FOOTER-->
+    <blockquote class="blockquote text-center">
+      <p class="mb-0"></p>
+        <footer class="blockquote-footer">Todos los derechos e izquierdos reservados. @PALO <cite title="Source Title"></cite></footer>
+    </blockquote>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
-</body>
+  </body>
 </html>
