--- a/productos.html
+++ b/productos.html
@@ -47,59 +47,85 @@
     <h2>PRODUCTOS</h2>
     <!--COLOCAR TODOS LOS PRODUCTOS AQUI-->
     <main> 
-      <div class="card-deck">
-        <div class="card">
-          <img class="card-img-top" src="./productos/1.jpeg" alt="Card image cap">
-          <div class="card-body">
-            <h3 class="card-title">Buzo Negro</h3>
-            <p class="card-text">Buzo de material resistente en distintos talles.</p>
-            <h4 class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></h4>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="./productos/2.jpeg" alt="Card image cap">
-          <div class="card-body">
-            <h3 class="card-title">Remera Verde</h3>
-            <p class="card-text">Estilo militar y ecológico.</p>
-            <h4 class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></h4>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="./productos/3.jpeg" alt="Card image cap">
-          <div class="card-body">
-            <h3 class="card-title">Buzo Azul</h3>
-            <p class="card-text">No pases frío nunca más!</p>
-            <h4 class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></h4>
-          </div>
-        </div>
-      </div>
 
-      <div class="card-deck">
-          <div class="card">
-            <img class="card-img-top" src="./productos/4.jpeg" alt="Card image cap">
-            <div class="card-body">
-              <h3 class="card-title">Jean Negro</h3>
-              <p class="card-text">Es un Jean que podes usar para ir a trabajar.</p>
-              <h4 class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></h4>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <img src="./productos/1.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Buzo Negro</h5>
+                <p class="card-text">Buzo de material resistente en distintos talles.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Talles: S-M-L-XL</small>
+              </div>
             </div>
           </div>
-          <div class="card">
-            <img class="card-img-top" src="./productos/5.jpeg" alt="Card image cap">
-            <div class="card-body">
-              <h3 class="card-title">Campera Azul</h3>
-              <p class="card-text">Toda la facha con este producto.</p>
-              <h4 class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></h4>
+          <div class="col">
+            <div class="card h-100">
+              <img src="./productos/2.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Remera Verde</h5>
+                <p class="card-text">Estilo militar y ecológico.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Talles: S-M-L-XL</small>
+              </div>
             </div>
           </div>
-          <div class="card">
-            <img class="card-img-top" src="./productos/6.jpeg" alt="Card image cap">
-            <div class="card-body">
-              <h3 class="card-title">Buzo con capucha Azul</h3>
-              <p class="card-text">Más onda imposible con esta prenda.</p>
-              <h4 class="card-text"><small class="text-muted">Talles: S-M-L-XL</small></h4>
+          <div class="col">
+            <div class="card h-100">
+              <img src="./productos/3.jpeg"  class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Buzo Azul</h5>
+                <p class="card-text">No pases frío nunca más!</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Talles: S-M-L-XL</small>
+              </div>
             </div>
           </div>
         </div>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <img src="./productos/4.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Jean Negro</h5>
+                <p class="card-text">Es un Jean que podes usar para ir a trabajar.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Talles: S-M-L-XL</small>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="./productos/5.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Campera Azul</h5>
+                <p class="card-text">Toda la facha con este producto.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Talles: S-M-L-XL</small>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="./productos/6.jpeg"class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Buzo con capucha Azul</h5>
+                <p class="card-text">Más onda imposible con esta prenda.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Talles: S-M-L-XL</small>
+              </div>
+            </div>
+          </div>
+        </div>
+
     </main>
         
     <div class="alert alert-dark" role="alert">
