--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
       <h3>Ropa Minimalista</h3>
 
       <p class="lead">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eaque doloremque ea dicta officia quos magni, architecto quod! Porro officia mollitia repudiandae quasi placeat omnis incidunt, vitae beatae, expedita quia laudantium explicabo vero vel alias consequatur rem, ab harum dolorum quas nesciunt distinctio deserunt minus aspernatur. Quaerat, error nam. Esse rerum eius quia eveniet totam, magni quo voluptates voluptatum veniam odit! Cupiditate illo eius, numquam totam enim quibusdam commodi, nobis porro delectus dolores explicabo odit, voluptatibus a earum provident rem maxime labore sapiente debitis. Suscipit laboriosam qui, amet quia pariatur molestias earum sunt veniam commodi alias, hic officia repellendus exercitationem. Animi blanditiis sapiente possimus. Voluptate quae nisi deserunt iusto, distinctio sit eum praesentium, dignissimos accusamus quibusdam numquam quas aspernatur officia vitae? Dicta voluptas, quae repellendus explicabo itaque ut voluptatum nobis fugiat praesentium amet harum perspiciatis sapiente. Consectetur dolorem, suscipit praesentium et nemo magni, amet vero dolorum ratione quia, blanditiis sed?
+        La ropa mas minimalista que vas a encontrar en cualquier sitio web. Si te gusta vestirte bien y cómodo sin mucha complicacion, este es el lugar indicado. Tenemos distintos accesorios y seguro vas a encontrar el tuyo!
       </p>
 
       <h4>Eco-Friendly</h4>
 
       <p class="lead">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam odio optio explicabo consequuntur eius harum, ea ducimus quaerat temporibus consequatur adipisci impedit, omnis quos deleniti pariatur saepe molestiae incidunt et dolor. Odit quae repellendus architecto obcaecati autem nemo porro, quod ut sequi in nulla asperiores sint ipsa dicta, adipisci deleniti iste similique tenetur animi ipsam temporibus voluptate numquam quos. Ex nihil consequuntur architecto molestiae assumenda nulla excepturi odio eius unde ipsum, laboriosam odit esse eum doloremque suscipit aliquid. Possimus natus libero autem! Quia neque omnis quo, ducimus provident pariatur numquam aut reiciendis id error, autem cum itaque sint officiis accusantium perspiciatis odit? Architecto soluta pariatur sequi aspernatur? Nemo, consequatur maxime. Distinctio voluptatibus placeat assumenda voluptates ipsam maiores in nostrum natus temporibus dignissimos iure aspernatur quam, impedit praesentium, sed ab dolor repudiandae quae adipisci veritatis voluptatum aut voluptas quasi. Voluptatum tempore nesciunt similique nihil cum magni nemo soluta? Accusamus, iste maxime.
+        Toda la ropa que hacemos es eco-friendly, es decir, no utilizamos tejidos que dañen el medio ambiente, o que su proceso de confeccion haya sido industrial. Toda nuestra ropa se confecciona con materia prima de alta calidad y en nuestros talleres dentro del país.
       </p>
 
     </main>
